# poo-pad-pong

./: .env.sample  .gitignore  Cargo.toml  Makefile.toml  README.md  compose.yaml  rust-toolchain.toml
.github/workflows/: rust.yml
application/: Cargo.toml
application/server/: Cargo.toml
application/server/src/: main.rs
application/src/: main.rs
application/worker/: Cargo.toml
application/worker/src/: main.rs
docs/: erd.plantuml
domain/: Cargo.toml
domain/src/: error.rs  fields.rs  keys.rs  lib.rs  objects.rs  rules.rs
infrastructure/database/: Cargo.toml
infrastructure/database/src/: entities.rs  lib.rs
infrastructure/database/src/client/: fields.rs  keys.rs  objects.rs  rules.rs
infrastructure/database/src/entities/: fields.rs  keys.rs  objects.rs  prelude.rs  rules.rs  sea_orm_active_enums.rs
infrastructure/grpc/: Cargo.toml  build.rs
infrastructure/grpc/proto/: fields.proto  objects.proto  rules.proto
infrastructure/grpc/src/: api.rs  error.rs  fields.rs  lib.rs  objects.rs  rules.rs
infrastructure/repository/: Cargo.toml
infrastructure/repository/src/: fields.rs  keys.rs  lib.rs  objects.rs  rules.rs
infrastructure/subscriber/: Cargo.toml  build.rs
infrastructure/subscriber/src/: keys.rs  lib.rs  pubsub_schema.rs
infrastructure/subscriber/src/proto/: keys.proto
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
