[workspace]
members = [
    "application/server",
    "application/worker",
    "domain",
    "infrastructure/database",
    "infrastructure/grpc",
    "infrastructure/repository",
    "infrastructure/subscriber",
    "migration",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false
