[package]
name = "domain"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
regex = "1.8.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
uuid = { version = "1.3.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
