[package]
name = "worker"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
google-cloud-default = { version = "0.2.0", features = ["pubsub"] }
google-cloud-gax = "0.14.0"
google-cloud-pubsub = "0.14.0"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7"

database = { path = "../../infrastructure/database" }
domain = { path = "../../domain" }
repository = { path = "../../infrastructure/repository" }
subscriber = { path = "../../infrastructure/subscriber" }
