[package]
name = "grpc"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[dependencies]
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9"
uuid = { version = "1.3.2", features = ["v4", "fast-rng", "macro-diagnostics"] }

domain = { path = "../../domain" }

[build-dependencies]
tonic-build = "0.9"
walkdir = "2.3.2"
