[package]
name = "repository"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
sea-orm = "0.11.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

database = { path = "../database" }
domain = { path = "../../domain" }
