[package]
name = "subscriber"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bytes = "1.4.0"
prost = "0.11"

domain = { path = "../../domain" }

[build-dependencies]
prost-build = { version = "0.11" }
walkdir = "2.3.2"
